# tulips

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
fixtures/templates/: 0-secret.yaml  ingress.yaml  pvc.yaml
tests/: conftest.py  test_all_kinds.py  test_tulip.py
tests/fixtures/: parse.yaml
tulips/: __init__.py  __main__.py  tulip.py
tulips/resource/: __init__.py  certificate.py  configmap.py  cronjob.py  deployment.py  hpa.py  ingress.py  issuer.py  job.py  networkpolicy.py  persistentvolumeclaim.py  resourcequota.py  secret.py  service.py  statefullset.py
