[tool.poetry]
name = "tulips"
version = "1.4.6"
description = "Wrapper around kubernetes-clients/python"
authors = ["Janez Troha <dz0ny@ubuntu.si>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/dz0ny/tulips"
homepage = "https://github.com/dz0ny/tulips"

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^9.0.0"
click = "^6.7"
structlog = "*"
passlib = "^1.7"
"ruamel.yaml" = "^0.15.89"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
pylint = "*"
codecov = "*"
pytest-cov = "*"
pytest-mock = "*"

[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
