[tool.poetry]
name = "tulips"
version = "1.5.9"
description = "Wrapper around kubernetes-clients/python"
authors = ["Janez Troha <dz0ny@ubuntu.si>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/dz0ny/tulips"
homepage = "https://github.com/dz0ny/tulips"

[tool.poetry.dependencies]
python = ">=3.6,<4"
kubernetes = "==12.0.1"
click = ">=6.7"
structlog = "*"
passlib = "^1.7"
# ERROR: regex-2020.11.13-cp38-cp38-manylinux2014_x86_64.whl is not a supported wheel on this platform.
regex = "==2020.10.11"
"ruamel.yaml" = ">=0.15.89"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
pylint = "*"
codecov = "*"
pytest-cov = "*"
pytest-mock = "*"
black = "^20.8b1"

[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
